[tool.poetry]
name = "votebot"
version = "0.1.0"
description = "The discord bot for voting."
authors = ["Maruo.S <raspi-maru2004@outlook.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tortoise-orm = {extras = ["accel"], version = "^0.19.2"}
py-cord = {extras = ["speed"], version = "^2.4.1"}

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
